--- a/app/src/main/res/layout/inchool_school_view.xml
+++ b/app/src/main/res/layout/inchool_school_view.xml
@@ -51,6 +51,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="20sp"
                 android:text="资讯速递" />
 
 
@@ -66,6 +67,17 @@
                     android:layout_height="wrap_content"
                     />
             </android.support.v4.widget.SwipeRefreshLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/last_school_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ListView>
         </LinearLayout>
 
 
