--- a/app/src/main/res/layout/friend_sontact.xml
+++ b/app/src/main/res/layout/friend_sontact.xml
@@ -5,5 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+    <TextView
+        android:id="@+id/chatlist"
+        android:text="chatList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
